[gd_scene load_steps=22 format=3 uid="uid://bgwijukb87u7c"]

[ext_resource type="Script" uid="uid://rr2g55f8xre" path="res://mushroom.gd" id="1_jg55k"]
[ext_resource type="Texture2D" uid="uid://gs8gc8cjqt3g" path="res://monsters/Mushroom-Idle.png" id="1_ke5i0"]
[ext_resource type="Texture2D" uid="uid://cuu5cb6cjwuew" path="res://monsters/Mushroom-Run.png" id="2_pl5ep"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jg55k"]
atlas = ExtResource("1_ke5i0")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gvq0"]
atlas = ExtResource("1_ke5i0")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rjv2"]
atlas = ExtResource("1_ke5i0")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxf4e"]
atlas = ExtResource("1_ke5i0")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jokqs"]
atlas = ExtResource("1_ke5i0")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6byal"]
atlas = ExtResource("1_ke5i0")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr5pi"]
atlas = ExtResource("1_ke5i0")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbs7r"]
atlas = ExtResource("2_pl5ep")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gwmg"]
atlas = ExtResource("2_pl5ep")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eeiv3"]
atlas = ExtResource("2_pl5ep")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_11t0p"]
atlas = ExtResource("2_pl5ep")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fco54"]
atlas = ExtResource("2_pl5ep")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qj5l"]
atlas = ExtResource("2_pl5ep")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_maw5c"]
atlas = ExtResource("2_pl5ep")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awyqj"]
atlas = ExtResource("2_pl5ep")
region = Rect2(560, 0, 80, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3ovua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg55k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gvq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rjv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxf4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jokqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6byal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr5pi")
}],
"loop": true,
"name": &"idle_mush",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbs7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gwmg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eeiv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11t0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fco54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qj5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maw5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awyqj")
}],
"loop": true,
"name": &"run_mush",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c6upu"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m2lam"]
radius = 51.009804

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_jg55k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_3ovua")
animation = &"idle_mush"
frame_progress = 0.20440064

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_c6upu")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m2lam")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
